# privesc

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yaml  release.yaml  rust.yaml
examples/: basic.rs  spawn.rs
src/: error.rs  lib.rs  privesc_darwin.rs  privesc_linux.rs  privesc_windows.rs
src/privesc_windows/: args.rs  mod.rs
